# documentation-assistant

./: README.md  config.py  ingestion.py  logger.py  main.py  pyproject.toml
backend/: core.py
